# task-quickjs-ng

./: .gitignore  .gitmodules  CMakeLists.txt  Civet.patch  LICENSE  README.md  Taskfile.yaml  qjs.c  strrepl.c
.github/workflows/: release.yaml  test.yaml
docker/: Dockerfile.nektosact
go/: basic_test.go  benchmark_test.go  go.mod  go.sum  taskquickjsng_test.go
go/testdata/: args.js  dir.js  script.civet  script.js
